--- a/HW3/public/styles/main.css
+++ b/HW3/public/styles/main.css
@@ -3,76 +3,77 @@
 @media (min-width:961px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */ }
 
 body{
-  background-color: lightgrey;
+  background-color: black;
+  font-family: "Monsterrat", Arial, Helvetica, sans-serif;
+  text-align: center;
 }
 table, th, td {
     border: 1px solid black;
 }
 @font-face {
-  font-family: "Literata";
+  font-family: "Monsterrat";
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/Literata/static/Literata-Regular.ttf") format("truetype");
+  src: url("../fonts/Monsterrat/Montserrat-Light.ttf") format("truetype");
 }
 @font-face {
-  font-family: "Literata";
+  font-family: "Monsterrat";
   font-style: bold;
   font-weight: 400;
-  src: url("../fonts/Literata/static/Literata-Bold.ttf") format("truetype");
+  src: url("../fonts/Monsterrat/Montserrat-Regular.ttf") format("truetype");
 }
 @font-face {
-  font-family: "Literata";
+  font-family: "Monsterrat";
   font-style: italic;
   font-weight: 400;
-  src: url("../fonts/Literata/static/Literata-Italic.ttf") format("truetype");
+  src: url("../fonts/Monsterrat/Montserrat-LightItalic.ttf") format("truetype");
 }
 
 /****** header ******/
 header {
-  background-image: url("../images/bg_homepage.jpg");
-  background-color: #fcfcdc;
-  text-align: center;
-  padding: 20px 0;
-  font-family: "Literata", serif;
+  background-image: url("../images/bg_header.jpg");
+  background-position: center;
+  background-attachment: fixed;
+  padding: 20px;
+  margin: 5px;
+  height: 100vh;
   color: white;
+  text-shadow: 2px 2px 4px #000000;
 }
 
-header hr {
-  width: 30%;
+header h1 {
+  font-size: xx-large;
 }
 
 /****** main content ******/
-img{
-  margin: 10px;
-}
-
-main {
-  text-align: center;
-}
-
-ul {
-  background-color: white;
-  border: 8px double black;
-  border-radius: 4px;
-  margin: 0 auto;
+/*** section defs ***/
+.grey-section{
+  background-color: lightgrey;
   padding: 20px;
-  text-align: left;
-  width: 200px;
+  margin: 5px;
+  height: 100vh;
+}
+
+.white-section{
+  background-color: white;
+  padding: 20px;
+  margin: 5px;
+  height: 100vh;
 }
 
 ul li {
   margin: 5px;
+  text-align: left;
 }
 
-a:link { color: #3366BB; }
-a:visited { color: #663366 }
-a:visited:hover { color: #0b0080; }
-a:hover { color: gray; }
-a:active { background-color: yellow; border: 4px solid red;}
-
+a:link { color: white; }
+a:visited { color: rgb(219, 219, 219); }
+a:visited:hover { color: orange; }
+a:hover { color: orange; }
 
 /****** footer ******/
 footer {
   font-size: small;
-  text-align: center;
+  margin: 5px;
+  background-color: white;
 }
