--- a/HW3/public/styles/main.css
+++ b/HW3/public/styles/main.css
@@ -1,6 +1,6 @@
 /* main.css */
-@media (min-width:641px)  { /* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */ }
-@media (min-width:961px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */ }
+/* @media (min-width:641px)  {  portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones } */
+/* @media (min-width:961px)  {  tablet, landscape iPad, lo-res laptops ands desktops  } */
 
 body{
   background-color: black;
