--- a/HW5/public/styles/main.css
+++ b/HW5/public/styles/main.css
@@ -5,18 +5,21 @@
   font-style: normal;
   font-weight: 400;
   src: url("../fonts/Monsterrat/Montserrat-Light.ttf") format("truetype");
+  font-display: swap;
 }
 @font-face {
   font-family: "Monsterrat";
   font-style: bold;
   font-weight: 400;
   src: url("../fonts/Monsterrat/Montserrat-Regular.ttf") format("truetype");
+  font-display: swap;
 }
 @font-face {
   font-family: "Monsterrat";
   font-style: italic;
   font-weight: 400;
   src: url("../fonts/Monsterrat/Montserrat-LightItalic.ttf") format("truetype");
+  font-display: swap;
 }
 
 :root{
@@ -147,8 +150,10 @@ header nav{
 }
 
 table img{
-  max-width: 200px;
+  max-width: 140px;
   width: 20vw;
+  max-height: 140px;
+  height: 20vw;
 }
 
 input, select{
